--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-OPENAI_API_KEY=sk-proj-IpSaPsbMxLvrruBkN1AhT3BlbkFJIMvf9csMXylmPUNCbj6P
-ELEVENLABS_API_KEY = 19142b21ea6217c9532ae219309c8a9b
+OPENAI_API_KEY=PUT_YOUR_APIKEY
+ELEVENLABS_API_KEY = PUT_YOUR_APIKEY
